Fix script and add basic styling

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <html>
-<head><title>Bank BTPN: Suku Bunga</title></head>
+<head>
+    <title>Bank BTPN: Suku Bunga</title>
+<style>
+    body{
+        background-color: black;
+        color: green;
+    }
+</style>
+</head>
 <body>
 <script src="index.js">
-
 </script>
 <div style="border: 1px solid #eee; overflow:auto; padding: 10px; ">
-<form name="form-data">
+<form name="formdata">
 <h2><centre>BANK BTPN</centre></h2>
 <br>
 <pre>
